# deutron

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
docs/: api-backend.md  api-frontend.md  command.md
examples/features/decorated/: app.ts  deutron.ts  index.html
examples/features/typescript/: app.ts
examples/features/typescript/frontend/: code.ts  deutron.d.ts  index.html
examples/languages/deno-example/: app.ts  deutron.ts  index.html
examples/languages/node-example/: app.js  deutron.js  index.html  package.json
examples/languages/python-example/: app.py  deutron.py  index.html
src/: app.rs  backend.rs  base.rs  cleanup.rs  compiler.rs  runtime.rs  state.rs  temp.rs
src/macros/: loggers.rs
src/shared/: embed_error.rs  embed_trailer.rs  mod.rs
src/webview/: deutron.js  icon.rs  mod.rs  script.rs  serve.rs  std.rs  transpile.rs  webview_manager.rs
src/webview/enums/: mod.rs
src/webview/enums/backend/: backend_event.rs  backend_message.rs  mod.rs
src/webview/enums/webview/: info.rs  mod.rs  target.rs  webview_action.rs
src/webview/enums/window/: mod.rs  window_action.rs  window_config.rs  window_control.rs  window_event.rs  window_message.rs
