[package]
name = "deutron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deutron"
path = "src/compiler.rs"

[[bin]]
name = "runtime"
path = "src/runtime.rs"

[dependencies]
wry = { version = "0.52.1", features = ["transparent"] }
tao = "0.34.0"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
mime_guess = "2.0.5"
http = "1.3.1"
anyhow = "1.0.98"
rand = "0.9.1"
bimap = "0.6.3"
tar = "0.4.44"

image = "0.25.6"
swc_core = { version = "32.0.4", features = [
    "common",
    "common_sourcemap",
    "ecma_ast",
    "ecma_codegen",
    "ecma_parser",
    "ecma_transforms",
    "ecma_parser_typescript",
    "ecma_transforms_typescript",
    "ecma_visit",
] }
editpe = { version = "0.2.1", features = ["images"] }
libsui = "0.10.0"
ctrlc = "3.4.7"


[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
opt-level = "s"

[build-dependencies]
winresource = "0.1.23"
